# gm-problem-viewer

./: .gitignore  CLAUDE.md  PROBLEM_FORMAT.md  README.md  TODO.md  WEB_DESIGN.md  config.example.yaml  pyproject.toml  setup.sh  start.sh
.github/templates/: deploy-site.yml
api/: __main__.py  config.py  jobs.py  main.py
api/checks/: __init__.py  ai_checks.py  collated.py  solutions.py  statement.py  tests.py  validators.py
api/collection/: __init__.py  editorial.py  frontmatter.py  problems.py  solutions.py  statement.py  test_sets.py  validators.py
api/execution/: execute_cpp.py  execute_python.py  run_ai_checks.py  run_checks.py  run_interactive.py  run_output_gen.py  run_testcase.py  run_testgen.py  run_validators.py
api/export/: check_template.py  dmoj.py  grader_template.py
api/models/: problem.py
api/routes/: editorial.py  export.py  jobs.py  problems.py  review.py  solutions.py  statement.py  tests.py  todo.py  validators.py
api/utils/: list_matching.py
docs/: features.md  getting-started.md  problem-format.md  static-site.md
examples/guess_a_number/: config.yaml  editorial.md  statement.md
examples/maximum_of_list/: TODO.md  config.yaml  editorial.md  statement.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: problems.ts
site/: build.py  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
site/public/: 404.html
site/src/: App.tsx  data.ts  main.tsx  types.ts
testlibpy/: __init__.py  case_generation.py  graph.py  random.py
(+105 files in other folders)
